# FIX4.0_demo

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  config.ini  simnow.ini.example
.github/instructions/: *.instructions.md
.github/pages/: index.html
.github/workflows/: ci.yml  docs.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  fix_client  fix_server
include/: client.hpp  server.hpp
include/app/: account.hpp  account_manager.hpp  fix_message_builder.hpp  instrument.hpp  instrument_manager.hpp  market_data_snapshot.hpp  matching_engine.hpp  order.hpp  order_book.hpp  order_event.hpp  position.hpp  position_manager.hpp  risk_manager.hpp  simulation_app.hpp
include/app/engine/: matching_engine.hpp  order_book.hpp  order_event.hpp
include/app/manager/: account_manager.hpp  instrument_manager.hpp  position_manager.hpp  risk_manager.hpp
include/app/model/: instrument.hpp  market_data_snapshot.hpp  order.hpp  position.hpp
include/base/: config.hpp  logger.hpp  safe_queue.hpp  thread_pool.hpp  timing_wheel.hpp
include/client/: client.hpp
include/core/: connection.hpp  reactor.hpp
include/fix/: application.hpp  fix_codec.hpp  fix_frame_decoder.hpp  fix_message_builder.hpp  fix_messages.hpp  fix_tags.hpp  session.hpp  session_manager.hpp
include/market/: ctp_md_adapter.hpp  ctp_trader_adapter.hpp  market_data.hpp  md_adapter.hpp  mock_md_adapter.hpp
include/server/: server.hpp
include/storage/: sqlite_store.hpp  store.hpp
src/: connection.cpp  session.cpp
src/app/: account_manager.cpp  instrument_manager.cpp  matching_engine.cpp  order_book.cpp  position_manager.cpp  risk_manager.cpp  simulation_app.cpp
src/app/engine/: matching_engine.cpp  order_book.cpp
src/app/manager/: account_manager.cpp  instrument_manager.cpp  position_manager.cpp  risk_manager.cpp
src/base/: config.cpp
src/client/: client.cpp  client_app.cpp  client_app.hpp  client_state.cpp  client_state.hpp  main.cpp
src/client/tui/: app.cpp  app.hpp  styles.hpp
src/client/tui/components/: account_panel.cpp  account_panel.hpp  header.cpp  header.hpp  message_panel.cpp  message_panel.hpp  order_panel.cpp  order_panel.hpp  position_panel.cpp  position_panel.hpp  search_box.cpp  search_box.hpp
src/core/: connection.cpp
src/fix/: fix_frame_decoder.cpp  session.cpp  session_manager.cpp
src/market/: ctp_md_adapter.cpp  ctp_trader_adapter.cpp  mock_md_adapter.cpp
src/server/: main.cpp  server.cpp
src/storage/: sqlite_store.cpp
tests/: CMakeLists.txt  README.md  build.sh  main.cpp  run_tests.sh  test_fix_frame_decoder.cpp  test_safe_queue  test_safe_queue.cpp  test_timing_wheel.cpp
tests/e2e/: config_test.ini  test_multi_client.sh  test_multi_trading.sh  test_open_close.sh  test_session_flow.sh  test_trading.sh
tests/scripts/: coverage.sh
tests/unit/: test_account.cpp  test_account_manager.cpp  test_application.cpp  test_client_order_list.cpp  test_client_position_updates.cpp  test_client_state.cpp  test_close_profit_push_and_merge.cpp  test_config.cpp  test_fix_codec.cpp  test_frame_decoder.cpp  test_instrument.cpp  test_instrument_manager.cpp  test_matching_engine.cpp  test_md_adapter.cpp  test_open_close_position.cpp  test_order_book.cpp  test_order_history_query.cpp  test_position.cpp  test_position_manager.cpp  test_rapidcheck_integration.cpp  test_reset_seqnum_flag.cpp  test_risk_manager.cpp  test_server_session_store_restore.cpp  test_session.cpp  test_session_manager.cpp  test_session_seq_gap_buffering.cpp  test_simulation_app_persistence.cpp  test_sqlite_store.cpp  test_thread_pool.cpp  test_timing_wheel.cpp
